syntax = "proto3";

package net;

option go_package = ".;net";

service VoterQuery {
    rpc Opinion (QueryRequest) returns (QueryReply) {}
}

message QueryRequest {
    repeated string conflictIDs = 1;
    repeated string timestampIDs = 2;
}

message QueryReply {
    repeated int32 opinion = 1;
}